# django-flutter-example

./: .gitignore  Flutter & Python Meetup Präsentation.pptx  LICENSE  README.md  enterPy Django meets Flutter.pptx  enterPy Django trifft Flutter.pptx
backend/: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
backend/core/: admin.py  models.py  serializers.py  views.py
backend/core/management/commands/: makedemo.py
backend/core/migrations/: 0001_initial.py
backend/personbook/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/pythonflutterdemo/frontend/: MainActivity.kt
frontend/android/app/src/profile/: AndroidManifest.xml
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: constants.dart  main.dart
frontend/lib/api/: api_client.dart  api_client.g.dart
frontend/lib/models/: person.dart  person.g.dart
frontend/lib/widgets/: person_list_screen.dart
