[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = [
    "py36",
    "py37",
    "py38",
    "py39",
    "py310",
]
exclude = '''
/(
    \.eggs
  | \.git
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
default_section = "THIRDPARTY"
known_first_party = "core,personbook,scripts,tests"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-rA"
]
testpaths = [
    "tests",
]

[tool.poetry]
name = "django-search-example"
version = "1.0.0"
description = ""
authors = ["Thomas Aglassinger <roskakori@users.sourceforge.net>"]

[tool.poetry.dependencies]
python = ">=3.12, <4"
Django = "^4"
django-extensions = "^3"
django-debug-toolbar = "^3"
djangorestframework = "^3"
pyyaml = "^6"

[tool.poetry.dev-dependencies]
pytest = "^8"
pytest-django = "^4"
pytest-cov = "^6"
pre-commit = "^4"

[pycodestyle]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.8.1"]
build-backend = "poetry.core.masonry.api"
